# g1-poser

./: .gitignore  .gitignore copy  README.md  g1_poser.py  main.py  mink_g1_feet_planted.py  mink_g1_pose_ik.py  playback_animation.py  playback_animation_physics.py  pose-tool.py  pyproject.toml  real-test.py  sim-poses.py  sliders.py  temp.py  test_torso_collision.py  utils.py
.cursor/rules/: tk-warning.mdc
g1_description/: g1.xml  mvp_test.xml  scene_g1_targets.xml
g1_description/meshes/: forearm.stl
scripts/: mink_g1_minimal.py  mink_g1_pose_ik.py  real-poses.py
tools/: compute_inertia.py  compute_stl_aabb.py  convert_pose_json_keys.py  usd_intertia.py
